--- a/css/style.css
+++ b/css/style.css
@@ -1617,9 +1617,10 @@ margin:5px 0 5px 0;
 	}
 
 	#mainmenu li a.btn-rounded {
-		margin: 20px;
+		margin-top:  20px;
+		margin-bottom: 20px;
 		font-weight: bold;
-		padding: 5px 10px; /* Adjust to match the menu items */
+		padding: 2px 10px; /* Adjust to match the menu items */
 		background-color: #ffd200; /* Same as before for the rounded button */
 		color: #fff; /* White text for better contrast */
 		text-transform: uppercase;
